[package]
name = "fps-controller"
version = "0.1.0"
authors = ["glaceef <masaki7322_art@yahoo.co.jp>"]
edition = "2018"

license = "MIT"
description = "Fps stabilizer for piston"
repository = "https://github.com/glaceef/fps_controller"
readme = "README.md"
keywords = ["piston", "fps"]

[lib]
name = "fps_controller"
path = "src/lib.rs"

[dependencies]

[dev-dependencies]
piston_window = "*"

[[example]]
name = "fps_test"
