[package]
name = "fps-controller"
version = "0.1.1"
authors = ["glaceef <masaki7322_art@yahoo.co.jp>"]
edition = "2018"

license = "MIT"
description = "fps stabilizer for eventloop"
repository = "https://github.com/glaceef/fps_controller"
readme = "README.md"
keywords = ["game", "eventloop", "fps"]

[lib]
name = "fps_controller"
path = "src/lib.rs"

[dependencies]

[dev-dependencies]
piston_window = "0.89.0"

[[example]]
name = "fps_test"
